tests/ui/typeck/consider-borrowing-141810-4.stderr
error[E0308]: mismatched types
  --> $DIR/consider-borrowing-141810-4.rs:5:9
   |
LL |         String::from("hi")
   |         ^^^^^^^^^^^^^^^^^^ expected `&String`, found `String`
   |
help: consider borrowing here
   |
LL |         &String::from("hi")
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
