tests/ui/typeck/consider-borrowing-141810-4.rs
fn baz(x: &String) {}

fn bar() {
    baz({
        String::from("hi") //~ ERROR mismatched types
    });
}

fn main() {
    bar();
}
